fixed menu spacing

--- a/css/theStyle.css
+++ b/css/theStyle.css
@@ -43,6 +43,7 @@ li {
     padding-top: 0;
     padding-right: 10px;
     /*border-right: 1px solid gray;*/
+    cursor: pointer;
     color: black;
 }
 li:hover {
@@ -82,6 +83,9 @@ a:hover {
 }
 
 #navigation {
+    /*border: 1px solid black;*/
+    margin: 0;
+    padding: 0;
     display: none;
 }
 
